fix button align bug

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ p {
 
 .Link {
   text-align: -webkit-center;
+  display: block;
 }
 
 .Button--ocho {
